--- a/item.html
+++ b/item.html
@@ -279,6 +279,10 @@
         <div class="row">
             <div class="col-12 col-lg-6 px-lg-0 catalog-item-slider-container">
                 <div class="image-preview-container">
+                    <div class="promo-label">
+                        <p class="sale-amount">10%</p>
+                        <p class="text">скидка</p>
+                    </div>
                     <img src="./assets/catalog-item/item-preview.png" alt="">
                 </div>
                 <div class="image-thumb active" image-src="./assets/catalog-item/item-preview.png"><img src="./assets/catalog-item/image-thumb.png" alt=""></div>
